2017-05-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search, info_next_index_match),
	* info/indices.h (APROPOS_NONE),
	* info/info-utils.c (copy_converting),
	* info/info.c (get_initial_file, add_initial_nodes, init_messages),
	* info/infodoc.c (describe_key, info_where_is),
	* info/m-x.c (info_execute_command),
	* info/session.c
	(menu_digit, info_menu_or_ref_item, info_follow_menus)
	(forward_move_node_structure, backward_move_node_structure)
	(info_view_file, dump_nodes_to_file, info_print_node)
	(info_toggle_regexp, info_search_internal)
	(tree_search_check_node, tree_search_check_node_backwards)
	(wipe_seen_flags, dispatch_error): Remove full stop from end
	of messages given to the user.  Inconsistent use of full stops
	reported by Benno Schulenberg.

2017-05-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (infokey format): Correct documentation of
	key binding for 'select-reference-this-line' command under --vi-keys.

2017-05-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (point_forward_char): Make sure that we always 
	advance the position of the point on the display.  The point 
	could get stuck at the very start of a node if the 'nodeline' 
	variable was set to 'pointers'.  Report from Benno Schulenberg 
	on 2017-04-27.

2017-05-03  Jason Hood  <jadoxa@yahoo.com.au>

	Allow style variables to be described and set.
	(Patch originally submitted 2017-01-29 on bug-texinfo.)

	* info/variables.c (rendition_variable): Remove.
	(rendition_choices): New variable.
	(info_variables): Use rendition_choices for the style variables.
	(rendition_to_string): New variable.
	(describe_variable, set_variable, set_variable_to_value): 
	Special handling for style variables.

2017-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: When checking for Perl XS support, set
	TEXINFO_XS environment variable in order to get more
	information printed (and also to negate any pre-existing